Amper 0.1.2, add linuxX64 platform

--- a/core/module.yaml
+++ b/core/module.yaml
@@ -1,6 +1,6 @@
 product:
   type: lib
-  platforms: [jvm, macosArm64]
+  platforms: [jvm, macosArm64, linuxX64]
 
 dependencies:
   - com.squareup.okio:okio:3.6.0
